kubernetes/apps/kyverno/kyverno/policys/NamespacedValidatingPolicy/default-enforce-memory-limits.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: enforce-memory-limits
  annotations:
    policies.kyverno.io/title: Enforce Memory Limits in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: This policy ensures that all containers in a Pod define memory limits.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        variables.allContainers.all(container,
          container.?resources.?limits.?memory.hasValue())
      message: All containers must define memory limits.
