kubernetes/apps/kyverno/kyverno/policys/NamespacedValidatingPolicy/default-ensure-readonly-hostpath.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: ensure-readonly-hostpath
  annotations:
    policies.kyverno.io/title: Ensure Read Only hostPath in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Pods which are allowed to mount hostPath volumes in read/write mode pose a
      security risk. This policy ensures all Pods mounting hostPath volumes do so
      in read only mode.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: false
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
    - name: hostPathVolumes
      expression: object.spec.?volumes.orValue([]).filter(volume, has(volume.hostPath))
  validations:
    - expression: >-
        variables.hostPathVolumes.all(hostPath,
          variables.allContainers.all(container,
            container.?volumeMounts.orValue([]).all(volume,
              hostPath.name != volume.name || volume.?readOnly.orValue(false) == true)))
      message: All hostPath volumes must be mounted as readOnly.
