kubernetes/apps/kyverno/kyverno/policys/NamespacedValidatingPolicy/default-pdb-maxunavailable.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pdb-maxunavailable
  annotations:
    policies.kyverno.io/title: PodDisruptionBudget maxUnavailable Non-Zero in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: PodDisruptionBudget
    policies.kyverno.io/description: >-
      This policy enforces that if a PodDisruptionBudget specifies the
      maxUnavailable field it must be greater than zero.
spec:
  validationActions:
    - Deny
  evaluation:
    background:
      enabled: false
  matchConstraints:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - longhorn-system
            - network
            - cert-manager
            - cilium-secrets
            - cnpg-system
            - database
            - flux-system
            - kube-node-lease
            - kube-public
            - kyverno
            - observability
            - system-upgrade
    resourceRules:
      - apiGroups:
          - policy
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - poddisruptionbudgets
  validations:
    - expression: int(object.spec.?maxUnavailable.orValue(1)) > 0
      message: The value of maxUnavailable must be greater than zero.
